[package]
name = "m3u8-player-site-kit"
version = "0.1.0"
edition = "2021"
description = "Small URL helpers for M3U8 Player, the free M3U8 downloader, converter, and HLS player."
license = "MIT"
homepage = "https://m3u8-player.net"
repository = "https://github.com/bbwdadfg/m3u8-player-site-kit"
documentation = "https://docs.rs/m3u8-player-site-kit"
readme = "README.md"
keywords = ["m3u8player", "m3u8", "hls", "video", "streaming"]
categories = ["web-programming"]
include = ["Cargo.toml", "README.md", "LICENSE", "rust/src/lib.rs"]

[lib]
name = "m3u8_player_site_kit"
path = "rust/src/lib.rs"
