[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m3u8-player-site-kit"
version = "0.1.0"
description = "Small URL helpers for M3U8 Player, the free M3U8 downloader, converter, and HLS player."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "M3U8 Player", email = "hello@m3u8-player.net" }]
keywords = ["m3u8player", "m3u8", "hls", "video", "streaming"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://m3u8-player.net"
Source = "https://github.com/bbwdadfg/m3u8-player-site-kit"
"M3U8 downloader" = "https://m3u8-player.net/m3u8downloader/"
"M3U8 to MP4" = "https://m3u8-player.net/m3u8tomp4/"
